sandbox/output
GildedRose.java:2: error: cannot find symbol
    Item[] items;
    ^
  symbol:   class Item
  location: class GildedRose
GildedRose.java:4: error: cannot find symbol
    public GildedRose(Item[] items) {
                      ^
  symbol:   class Item
  location: class GildedRose
GildedRoseTest.java:8: error: cannot find symbol
        Item[] items = new Item[] { new Item("foo", 0, 0) };
        ^
  symbol:   class Item
  location: class GildedRoseTest
GildedRoseTest.java:8: error: cannot find symbol
        Item[] items = new Item[] { new Item("foo", 0, 0) };
                           ^
  symbol:   class Item
  location: class GildedRoseTest
GildedRoseTest.java:8: error: cannot find symbol
        Item[] items = new Item[] { new Item("foo", 0, 0) };
                                        ^
  symbol:   class Item
  location: class GildedRoseTest
5 errors
